--- a/css/rwd.css
+++ b/css/rwd.css
@@ -139,8 +139,15 @@
     }
 
     .head-icon {
-        font-size: 50%;
+        font-size: 60%;
+
     }
+
+    .head-icon a {
+    
+    width: 60px;
+    height: 60px;
+line-height: 60px;}
 
     .form {
         min-width: 630px;
@@ -154,4 +161,16 @@
     #phone,
     #mail {
         width: 100%;
+        height: 50px;
     }
+	
+
+    .information div {
+    	font-size: 120%;
+    }
+
+    
+    
+
+    
+}
