--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     padding: 0;
     font-family: Noto Sans TC, Times New Roman, sans-serif;
     font-size: 20px;
+    min-width: 1200px;
 
 }
 
