--- a/css/rwd.css
+++ b/css/rwd.css
@@ -113,15 +113,19 @@
 
 @media only screen and (max-width: 767px) {
     body {
-        font-size: 25px;
+        font-size: 15px;
     }
 
     .head-icon {
         font-size: 70%;
     }
 
+    .educationcontent h2 {
+        font-size: 120%;
+    }
+
     .form {
-        min-width: 630px;
+        width: 100%;
     }
 
     .form-message textarea {
@@ -134,16 +138,39 @@
         width: 100%;
         height: 35px;
     }
+
+    .clearfix {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .information {
+        width: ;
+    }
+
+    .form {
+        width: 80%; 
+    }
+
+    .form-btn input[type="submit"] {
+        font-size: 0.6em;
+    }
+
 }
 
 @media only screen and (max-width: 480px) {
     body {
-        font-size: 30px;
+        font-size: 15px;
     }
 
     .head-icon {
         font-size: 60%;
 
+    }
+
+     .educationcontent h2 {
+        font-size: 95%;
     }
 
     .head-icon a {
@@ -153,25 +180,35 @@
 line-height: 60px;}
 
     .form {
-        min-width: 630px;
+        width: 90%;
     }
 
     .form-message textarea {
-        width: 100%;
+        width: 90%;
+        padding: 10px;
     }
 
     #name,
     #phone,
     #mail {
-        width: 100%;
+        width: 90%;
         height: 50px;
+        padding: 10px;
     }
 	
 
-    .information div {
-    	font-size: 120%;
-    }
+   .information div {
 
+   }
+
+
+.form-btn input {
+    margin-right: 10px;
+}
+
+.form-btn input[type="submit"] {
+        font-size: 0.4em;
+    }
     
     
 
