--- a/css/rwd.css
+++ b/css/rwd.css
@@ -11,13 +11,13 @@
 @media only screen and (max-width: 1023px) {
 
     body {
-        
+
         font-size: 20px;
     }
 
     .sticky+#content1 {
-    padding-top: 0px;
-}
+        padding-top: 0px;
+    }
 
     #navbar {
         display: none;
@@ -145,12 +145,16 @@
         align-items: center;
     }
 
+    .c100 {
+        margin-left: 48px;
+    }
+
     .information {
         width: ;
     }
 
     .form {
-        width: 80%; 
+        width: 80%;
     }
 
     .form-btn input[type="submit"] {
@@ -169,15 +173,16 @@
 
     }
 
-     .educationcontent h2 {
+    .educationcontent h2 {
         font-size: 95%;
     }
 
     .head-icon a {
-    
-    width: 60px;
-    height: 60px;
-line-height: 60px;}
+
+        width: 60px;
+        height: 60px;
+        line-height: 60px;
+    }
 
     .form {
         width: 90%;
@@ -195,22 +200,20 @@ line-height: 60px;}
         height: 50px;
         padding: 10px;
     }
-	
-
-   .information div {
-
-   }
 
 
-.form-btn input {
-    margin-right: 10px;
-}
+    .information div {}
 
-.form-btn input[type="submit"] {
+
+    .form-btn input {
+        margin-right: 10px;
+    }
+
+    .form-btn input[type="submit"] {
         font-size: 0.4em;
     }
-    
-    
 
-    
+
+
+
 }
