--- a/css/rwd.css
+++ b/css/rwd.css
@@ -187,8 +187,16 @@
 
         }
 
+        .photostickers img {
+            position: relative;
+            right: 40px;
+            width: 150%;
+            height: auto;
+            
+        }
+
         #header h2 {
-           padding: 5px;
+            padding: 5px;
         }
 
         .educationcontent h2 {
@@ -202,7 +210,7 @@
             line-height: 60px;
         }
 
-        .form {
+        .photosti .form {
             width: 90%;
         }
 
