--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ h3:after {
     background-color: rgba(255, 255, 255, 0.8);
     border-bottom: 1px solid #ccc;
     height: 50px;
+    z-index: 99999;
 
 
 }
