--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,7 @@ h3:after {
     align-items: center;
     background-color: rgba(255, 255, 255, 0.8);
     border-bottom: 1px solid #ccc;
+    box-shadow: 0 0.5px 1.5px #333;
     height: 50px;
     z-index: 99999;
 
