--- a/css/rwd.css
+++ b/css/rwd.css
@@ -182,6 +182,26 @@
             font-size: 15px;
         }
 
+        #header {
+            width: 100%;
+            height: 100vh;
+            background: url('../images/header2.jpg') no-repeat;
+            background-position: center;
+            background-size: cover;
+            overflow: hidden;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-content: center;
+            color: white;}
+
+        #header:before {
+            content: '';
+            display: block;
+            height: 150px;
+        }
+
         .head-icon {
             font-size: 100%;
 
@@ -192,7 +212,7 @@
             right: 40px;
             width: 150%;
             height: auto;
-            
+
         }
 
         #header h2 {
@@ -200,6 +220,11 @@
         }
 
         .educationcontent h2 {
+            font-size: 150%;
+            margin-bottom: 50px;
+        }
+
+        .educationcontent p {
             font-size: 110%;
         }
 
@@ -241,9 +266,6 @@
         h3:after {
 
             width: 30%;
-
-
-
         }
 
 
