--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ h3:after {
 #header {
     width: 100%;
     height: 100vh;
-    background: url('../images/header.jpg') no-repeat;
+    background: url('../images/header-min.jpg') no-repeat;
     background-position: center;
     background-size: cover;
     overflow: hidden;
