--- a/css/rwd.css
+++ b/css/rwd.css
@@ -36,7 +36,8 @@
 
     .photostickers {
         max-width: 50%;
-        align-self: center;
+        -ms-grid-row-align: center;
+            align-self: center;
         margin-top: 50px;
     }
 
@@ -270,4 +271,4 @@
 
 
 
-    }
+    }}
